fixed earth image not showing

--- a/components/HeroSection/style.css
+++ b/components/HeroSection/style.css
@@ -43,8 +43,11 @@
   justify-content: center;
   align-items: center;
 }
+#first > * {
+  z-index: 1;
+}
 #earth {
-  z-index: -100;
+  z-index: 0;
   width: auto;
   height: 60%;
   position: absolute;
@@ -58,6 +61,7 @@
   font-family: "Instrument Sans";
   border-radius: 0.5rem;
   color: white;
+  width: auto;
 }
 @media (width <= 700px) {
   #earth {
